[tool.poetry]
name = "algorithms"
version = "0.1.0"
description = "A compilation of common algorithms for sorting, selecting etc.."
authors = ["Cédric Ernewein <25933633+Cernewein@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
